--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav {
 
 nav .logo{
 	font-family: 'Heebo', sans-serif;
-	font-weight: 400;
+	font-weight: 1000;
 	font-size: 35.2px;
 	letter-spacing: 1px;
 	text-decoration: none;
@@ -47,7 +47,7 @@ nav .logo{
 nav ul {
 	display: flex;
 	justify-content: center;
-	align-items: center;	
+	align-items: center;
 }
 
 nav ul li {
@@ -103,7 +103,7 @@ footer.piemain {
 /*Página principal / index / main*/
 
 .main { 
-  background: url(images/photo_index.jpg) no-repeat center center fixed; 
+  background: url(images/photo_gallery192.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -377,27 +377,15 @@ p.autor{
 		width: 100%
 	}
 
+	nav ul li a{
+	font-size: 19px;
+	text-decoration: none;
+	padding: 2px 5px;
+	}
+
 	#boton {
 		width: 90%;
 		margin-right: 10px;
-	}
-}
-
-
-@media (max-width: 400px){
-
-	.contenedor_flex {
-	  	margin-left: 10px;
-	}
-
-	nav {
-		margin-left: 10px;
-		padding: 15px;
-	}
-
-	.subtitulo {
-		margin-top: 100px;
-		margin-left: 10px;
 	}
 }
 
