añado sección fotos color y subo nuevas imágenes

--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ footer.piemain {
 /*Página principal / index / main*/
 
 .main { 
-  background: url(images/photo_gallery192.jpg) no-repeat center center fixed; 
+  background: url(images/photo_index1.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
